--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "emailjs-com": "^3.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
@@ -13,6 +14,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-typewriter-effect": "^1.1.0",
+    "sweetalert2": "^11.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
